fixed next & prev buttons to align with logo

--- a/app/assets/stylesheets/base/_mixins.scss
+++ b/app/assets/stylesheets/base/_mixins.scss
@@ -1,10 +1,10 @@
-@mixin linearGradient($dir, $top, $bottom){
+@mixin linearGradient($dir, $top, $start, $bottom, $end){
     background: $top; /* Old browsers */
-    background: -moz-linear-gradient($dir,  $top 0%, $bottom 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, $dir top, $dir bottom, color-stop(0%,$top), color-stop(100%,$bottom)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient($dir,  $top 0%,$bottom 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient($dir,  $top 0%,$bottom 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient($dir,  $top 0%,$bottom 100%); /* IE10+ */
-    background: linear-gradient(to $dir,  $top 0%,$bottom 100%); /* W3C */
+    background: -moz-linear-gradient($dir, $top $start, $bottom $end); /* FF3.6+ */
+    background: -webkit-gradient(linear, $dir top, $dir bottom, color-stop($start, $top), color-stop($end, $bottom)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient($dir,  $top $start, $bottom $end); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient($dir,  $top $start, $bottom $end); /* Opera 11.10+ */
+    background: -ms-linear-gradient($dir,  $top $start, $bottom $end); /* IE10+ */
+    background: linear-gradient(to $dir,  $top $start, $bottom $end); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
 }
