--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -10,7 +10,7 @@ $brand-gray: #585759;
 
 // transparent colours
 $brand-trans: rgba(161, 125, 152, 0.3);
-$brand-gray-trans: rgba(88, 87, 89, 0.2) ;
+$brand-gray-trans: rgba(88, 87, 89, 0) ;
 
 //typography
 $font-header: 'Oswald', sans-serif;
