--- a/app/assets/stylesheets/styles/_base.scss
+++ b/app/assets/stylesheets/styles/_base.scss
@@ -32,7 +32,7 @@ header {
   grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: 2fr;
   height: 100px;
-  @include linearGradient(bottom, $brand-trans, $brand-gray-trans);
+  @include linearGradient(bottom, $brand-trans, 0%, $brand-gray-trans, 80%);
 }
 
 main {
